--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css"> </head>
 <body>
     <div class="container">
-        <h1>Buscador de Filmes e Músicas</h1>
+        <h1>Buscador de Memórias</h1>
         <p class="objetivo">Seu guia para filmes e músicas.</p>
 
        
